# bearblog-clone

./: .env.example  .gitignore  CLAUDE.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  conftest.py  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  specifications.md
config/: settings.py  urls.py
core/: admin.py  analytics_views.py  context_processors.py  middleware.py  models.py  views.py
core/management/commands/: aggregate_analytics.py  generate_sample_analytics.py
core/migrations/: 0001_initial.py  0002_post_image_alter_post_content.py  0003_postimage.py  0004_remove_post_image.py  0005_dailyanalytics_pageview.py
static/admin/css/: post_admin.css
static/admin/js/: post_admin.js  post_images.js
static/css/: style.css
static/js/: code-copy.js
templates/: base.html  blog_detail.html  blog_list.html  homepage.html  post_detail.html  post_list.html
templates/admin/: analytics_dashboard.html  base_site.html  post_preview.html  post_preview_popup.html
tests/: test_analytics.py  test_homepage.py  test_models.py
