[project]
name = "bearblog-clone"
version = "0.1.0"
description = "A minimalist single-author blog platform inspired by Bear Blog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "markdown>=3.8",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "django-types>=0.20.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.11.11",
    "types-markdown>=3.8.0.20250415",
]
